--- a/movies/src/main/res/layout/item_movie.xml
+++ b/movies/src/main/res/layout/item_movie.xml
@@ -8,6 +8,7 @@
     android:padding="20dp">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/movieCardViewGroup"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clickable="true"
