--- a/coreapp/src/main/res/values/colors.xml
+++ b/coreapp/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#353536</color>
     <color name="colorPrimaryDark">#de000000</color>
     <color name="colorAccent">#ffffff</color>
-    <color name="light_gray">#8b000000</color>
+    <color name="light_gray">#000000</color>
 </resources>
