--- a/movies/src/main/res/layout/item_movie.xml
+++ b/movies/src/main/res/layout/item_movie.xml
@@ -12,7 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clickable="true"
-        android:elevation="50dp"
         android:focusable="true"
         android:foreground="?android:attr/selectableItemBackground"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -26,10 +25,9 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/movieImageView"
+                android:id="@+id/moviePosterView"
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
-                android:src="@drawable/movie_cover_placeholder"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/movieInfoViewGroup"
                 app:layout_constraintStart_toStartOf="parent"
@@ -42,7 +40,7 @@
                 android:layout_marginStart="15dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/movieImageView"
+                app:layout_constraintStart_toEndOf="@+id/moviePosterView"
                 app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
