Improving movie detail layout

--- a/coreapp/src/main/res/values/colors.xml
+++ b/coreapp/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#353536</color>
+    <color name="colorPrimaryLight">#5b5b5d</color>
     <color name="colorPrimaryDark">#de000000</color>
     <color name="colorAccent">#ffffff</color>
 </resources>
