--- a/moviedetail/src/main/res/layout/fragment_movie_detail.xml
+++ b/moviedetail/src/main/res/layout/fragment_movie_detail.xml
@@ -13,7 +13,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
-        android:background="?attr/colorPrimary"
+        android:background="?attr/colorPrimaryDark"
         android:title="Avengers"
         android:titleTextColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -29,7 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/movieDetailViewGroup"
+        app:layout_constraintBottom_toTopOf="@+id/movieInfoCardView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
@@ -44,84 +44,97 @@
             android:layout_height="wrap_content" />
     </androidx.cardview.widget.CardView>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/movieDetailViewGroup"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/movieInfoCardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="10dp"
-        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardBannerView"
-        tools:visibility="visible">
+        app:cardBackgroundColor="@color/colorPrimaryLight"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/cardBannerView">
 
-        <ImageView
-            android:id="@+id/moviePosterView"
-            android:layout_width="140dp"
-            android:layout_height="200dp"
-            android:padding="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0"
-            app:layout_constraintVertical_chainStyle="packed" />
-
-        <TextView
-            android:id="@+id/movieNameView"
-            android:layout_width="0dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/movieDetailViewGroup"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="10dp"
-            android:textColor="@color/colorAccent"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/movieReleaseDateView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/moviePosterView"
-            app:layout_constraintTop_toTopOf="@+id/moviePosterView"
-            app:layout_constraintVertical_bias="0"
-            app:layout_constraintVertical_chainStyle="packed"
-            tools:text="Avengers: Infinity War" />
+            android:visibility="visible"
+            tools:visibility="visible">
 
-        <TextView
-            android:id="@+id/movieReleaseDateView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textColor="@color/colorAccent"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toTopOf="@+id/movieRatingView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/moviePosterView"
-            app:layout_constraintTop_toBottomOf="@+id/movieNameView"
-            app:layout_constraintVertical_chainStyle="packed"
-            tools:text="2018-04-25" />
+            <ImageView
+                android:id="@+id/moviePosterView"
+                android:layout_width="140dp"
+                android:layout_height="200dp"
+                android:scaleType="fitXY"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0"
+                app:layout_constraintVertical_chainStyle="packed" />
 
-        <TextView
-            android:id="@+id/movieRatingView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textColor="@color/colorAccent"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toTopOf="@+id/movieProductionView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/moviePosterView"
-            app:layout_constraintTop_toBottomOf="@+id/movieReleaseDateView"
-            app:layout_constraintVertical_chainStyle="packed"
-            tools:text="4,5" />
+            <TextView
+                android:id="@+id/movieNameView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:paddingTop="10dp"
+                android:paddingStart="8dp"
+                android:textColor="@color/colorAccent"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toTopOf="@+id/movieReleaseDateView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/moviePosterView"
+                app:layout_constraintTop_toTopOf="@+id/moviePosterView"
+                app:layout_constraintVertical_bias="0"
+                app:layout_constraintVertical_chainStyle="packed"
+                tools:text="Avengers: Infinity War" />
 
-        <TextView
-            android:id="@+id/movieProductionView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textColor="@color/colorAccent"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/moviePosterView"
-            app:layout_constraintTop_toBottomOf="@+id/movieRatingView"
-            app:layout_constraintVertical_chainStyle="packed"
-            tools:text="Produção: Disney" />
+            <TextView
+                android:id="@+id/movieReleaseDateView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorAccent"
+                android:paddingStart="8dp"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toTopOf="@+id/movieRatingView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/moviePosterView"
+                app:layout_constraintTop_toBottomOf="@+id/movieNameView"
+                app:layout_constraintVertical_chainStyle="packed"
+                tools:text="2018-04-25" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/movieRatingView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorAccent"
+                android:paddingStart="8dp"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toTopOf="@+id/movieProductionView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/moviePosterView"
+                app:layout_constraintTop_toBottomOf="@+id/movieReleaseDateView"
+                app:layout_constraintVertical_chainStyle="packed"
+                tools:text="4,5" />
+
+            <TextView
+                android:id="@+id/movieProductionView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:paddingStart="8dp"
+                android:textColor="@color/colorAccent"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/moviePosterView"
+                app:layout_constraintTop_toBottomOf="@+id/movieRatingView"
+                app:layout_constraintVertical_chainStyle="packed"
+                tools:text="Produção: Disney" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </androidx.cardview.widget.CardView>
+
 
     <androidx.core.widget.ContentLoadingProgressBar
         android:id="@+id/loadingView"
