--- a/moviedetail/src/main/res/layout/fragment_movie_detail.xml
+++ b/moviedetail/src/main/res/layout/fragment_movie_detail.xml
@@ -6,14 +6,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@color/colorPrimaryDark"
     app:layout_constraintVertical_chainStyle="packed">
 
     <Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
-        android:background="?attr/colorPrimaryDark"
+        android:background="?attr/colorPrimary"
         android:title="Avengers"
         android:titleTextColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -51,7 +51,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:cardBackgroundColor="@color/colorPrimaryLight"
+        app:cardBackgroundColor="@color/colorPrimary"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/cardBannerView">
 
