--- a/movies/src/main/res/layout/item_movie.xml
+++ b/movies/src/main/res/layout/item_movie.xml
@@ -3,22 +3,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:background="@color/colorPrimaryDark"
     android:padding="20dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/movieCardViewGroup"
-        android:layout_width="match_parent"
+        android:layout_width="140dp"
         android:layout_height="match_parent"
         android:clickable="true"
         android:focusable="true"
+        card_view:cardCornerRadius="18dp"
+        app:cardBackgroundColor="@color/colorPrimary"
         android:foreground="?android:attr/selectableItemBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        card_view:cardElevation="10dp">
+        card_view:cardElevation="8dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -26,22 +29,24 @@
 
             <ImageView
                 android:id="@+id/moviePosterView"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/movieInfoViewGroup"
+                android:layout_width="match_parent"
+                android:layout_height="173dp"
+                android:scaleType="fitXY"
+                android:foreground="@drawable/gradient_bg"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/movieInfoViewGroup"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/movieInfoViewGroup"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
+                android:layout_width="match_parent"
+                android:layout_height="69dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/moviePosterView"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintStart_toStartOf="parent"
+                android:padding="5dp"
+                app:layout_constraintTop_toBottomOf="@+id/moviePosterView">
 
                 <TextView
                     android:id="@+id/movieNameView"
@@ -52,6 +57,7 @@
                     android:textSize="16sp"
                     android:text="Homen-Aranha: Longe de casa"
                     android:textAlignment="viewStart"
+                    android:textColor="@color/colorAccent"
                     app:layout_constraintBottom_toTopOf="@+id/movieRateView"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0"
@@ -60,29 +66,30 @@
 
                 <TextView
                     android:id="@+id/movieRateView"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Nota: 4,0"
+                    android:text="4,0"
                     android:textSize="14sp"
-                    android:textAlignment="viewStart"
-                    app:layout_constraintBottom_toTopOf="@+id/movieReleaseDateView"
+                    android:textAlignment="viewEnd"
+                    android:textColor="@color/colorAccent"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/movieReleaseDateView"
                     app:layout_constraintTop_toBottomOf="@+id/movieNameView" />
 
                 <TextView
                     android:id="@+id/movieReleaseDateView"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:textSize="14sp"
-                    android:text="Lançamento: 20/05/2019"
+                    android:text="20/05/2019"
+                    android:textColor="@color/colorAccent"
                     android:textAlignment="viewStart"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/movieRateView"
                     app:layout_constraintHorizontal_bias="0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/movieRateView" />
+                    app:layout_constraintTop_toBottomOf="@+id/movieNameView" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
